# chat

./: pyproject.toml
Chat/: db.sqlite3
Chat/django_messages/: context_processors.py  fields.py  forms.py
django_messages/: admin.py  models.py  urls.py  utils.py  views.py
django_messages/static/django_messages/css/: django_messages.css
django_messages/templates/django_messages/: base.html  compose.html  inbox.html  new_message.html  outbox.html  trash.html  view.html
django_messages/templatetags/: inbox.py
main/: forms.py  urls.py  utils.py  views.py
main/migrations/: 0001_initial.py
main/static/main/css/: main.css
main/templates/main/: about.html  contacts.html  index.html  layout.html  login.html  register.html
mychat/: asgi.py  settings.py  urls.py
