[tool.poetry]
name = "repl_python3_chat"
version = "0.1.0"
description = ""
authors = ["nastyafukalova <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.2.4"
channels = "^3.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
